--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -50,8 +50,8 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Vampire/setup-wsl@v1
-      - if: runner.os == 'Windows'
-        run: choco install protobuf
+      # - if: runner.os == 'Windows'
+      #   run: choco install protobuf
       # - run: |
       #     curl -fsSL https://bun.sh/install | bash
       #     echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
