--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -56,9 +56,7 @@ jobs:
       #     curl -fsSL https://bun.sh/install | bash
       #     echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
       #     echo "$HOME/.bun/bin" >> $GITHUB_PATH
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
+      - run: curl -fsSL https://deno.land/x/install/install.sh | sh
       - run: deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
       - run: /home/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
