--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -56,6 +56,7 @@ jobs:
       #     curl -fsSL https://bun.sh/install | bash
       #     echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
       #     echo "$HOME/.bun/bin" >> $GITHUB_PATH
+      - run: apt update && apt install -y curl
       - run: curl -fsSL https://deno.land/x/install/install.sh | sh
       - run: deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
