--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -60,7 +60,7 @@ jobs:
       - run: |
           curl -fsSL https://deno.land/x/install/install.sh | sh
           echo "DENO_INSTALL=$HOME/.deno" >> $GITHUB_ENV
-          echo "$HOME/.deno/bin" >> $GITHUB_ENV
+          echo "$HOME/.deno/bin" >> $GITHUB_PATH
       - run: deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
       - run: /home/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
