--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -61,7 +61,8 @@ jobs:
           curl -fsSL https://deno.land/x/install/install.sh | sh
           export DENO_INSTALL="/root/.deno"
           export PATH="$DENO_INSTALL/bin:$PATH"
-      - run: deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
+          deno --version
+      - run: /root/.deno/bin/deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
       - run: /home/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
       #   if: runner.os == 'Linux'
