ci: bun_win - exp path

--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -52,10 +52,11 @@ jobs:
       - uses: Vampire/setup-wsl@v1
       # - if: runner.os == 'Windows'
       #   run: choco install protobuf
-      # - run: |
-      #     curl -fsSL https://bun.sh/install | bash
-      #     echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
-      #     echo "$HOME/.bun/bin" >> $GITHUB_PATH
+      - run: |
+          curl -fsSL https://bun.sh/install | bash
+          export BUN_INSTALL="/root/.bun"
+          export PATH="/root/.bun/bin:$PATH"
+          bun --version
       - run: apt update && apt install -y curl unzip
       - run: |
           curl -fsSL https://deno.land/x/install/install.sh | sh
@@ -64,10 +65,10 @@ jobs:
           deno --version
       - run: /root/.deno/bin/deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
-      - run: /home/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
+      - run: /home/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
       #   if: runner.os == 'Linux'
       # - run: /Users/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
       #   if: runner.os == 'macOS'
-      - run: bun install
-      - run: bun run src/http.consumer.test.ts
-      - run: bun run src/grpc.consumer.test.ts
+      - run: /root/.bun/bin/bun install
+      - run: /root/.bun/bin/bun run src/http.consumer.test.ts
+      - run: /root/.bun/bin/bun run src/grpc.consumer.test.ts
