--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -18,21 +18,24 @@ jobs:
         shell: bash
     steps:
       - uses: actions/checkout@v3
-      - if: runner.os == 'macOS'
-        run: brew install protobuf
+      # - if: runner.os == 'macOS'
+      #   run: brew install protobuf
       - run: |
           curl -fsSL https://bun.sh/install | bash
           echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
           echo "$HOME/.bun/bin" >> $GITHUB_PATH
-      - uses: denoland/setup-deno@v1
-        with:
-          deno-version: v1.x
+      - run: |
+          curl -fsSL https://deno.land/x/install/install.sh | sh
+          echo "DENO_INSTALL=$HOME/.deno" >> $GITHUB_ENV
+          echo "$HOME/.deno/bin" >> $GITHUB_PATH
       - run: deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
-      - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
-      - run: /home/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
-        if: runner.os == 'Linux'
-      - run: /Users/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
-        if: runner.os == 'macOS'
+      - run: |
+          curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
+          echo "$HOME/runner/bin" >> $GITHUB_PATH
+      - run: pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
+      #   if: runner.os == 'Linux'
+      # - run: /Users/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
+      #   if: runner.os == 'macOS'
       - run: bun install
       - run: bun run src/http.consumer.test.ts
       - run: bun run src/grpc.consumer.test.ts
@@ -40,7 +43,6 @@ jobs:
     timeout-minutes: 10
     strategy:
       matrix:
-        # No bun on windows
         os: [windows-latest]
       fail-fast: false
     runs-on: ${{ matrix.os }}
@@ -51,8 +53,6 @@ jobs:
       - uses: actions/checkout@v3
       - uses: Vampire/setup-wsl@v1
       - run: apt update && apt install -y curl unzip
-      # - if: runner.os == 'Windows'
-      #   run: choco install protobuf
       - run: |
           curl -fsSL https://bun.sh/install | bash
           export BUN_INSTALL="/root/.bun"
@@ -61,14 +61,11 @@ jobs:
       - run: |
           curl -fsSL https://deno.land/x/install/install.sh | sh
           export DENO_INSTALL="/root/.deno"
-          export PATH="$DENO_INSTALL/bin:$PATH"
+          export PATH="/root/.deno/bin:$PATH"
           deno --version
       - run: /root/.deno/bin/deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
       - run: /root/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
-      #   if: runner.os == 'Linux'
-      # - run: /Users/runner/bin/pact-plugin-cli -y install https://github.com/pactflow/pact-protobuf-plugin/releases/latest
-      #   if: runner.os == 'macOS'
       - run: /root/.bun/bin/bun install
       - run: /root/.bun/bin/bun run src/http.consumer.test.ts
       - run: /root/.bun/bin/bun run src/grpc.consumer.test.ts
