--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -52,7 +52,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: Vampire/setup-wsl@v1
-      - run: apt update && apt install -y curl unzip
+        with:
+            additional-packages:
+                curl
+                unzip
       - run: |
           curl -fsSL https://bun.sh/install | bash
           export BUN_INSTALL="/root/.bun"
