--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -46,7 +46,7 @@ jobs:
     env:
       DENO_INSTALL: /root/.deno
       BUN_INSTALL: /root/.bun
-      PATH: /root/.deno/bin;/root/.bun/bin:$PATH
+      PATH: /root/.deno/bin:/root/.bun/bin:$PATH
     steps:
       - uses: actions/checkout@v3
       - uses: Vampire/setup-wsl@v1
@@ -55,13 +55,16 @@ jobs:
           curl -fsSL https://bun.sh/install | bash
           # export BUN_INSTALL="/root/.bun"
           # export PATH="/root/.bun/bin:$PATH"
+          echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
+          echo "$HOME/.bun/bin" >> $GITHUB_PATH
           echo $HOME
           bun --version
       - run: |
           curl -fsSL https://deno.land/x/install/install.sh | sh
           # export DENO_INSTALL="/root/.deno"
           # export PATH="/root/.deno/bin:$PATH"
-          echo $HOME
+          echo "DENO_INSTALL=$HOME/.deno" >> $GITHUB_ENV
+          echo "$HOME/.deno/bin" >> $GITHUB_PATH
           deno --version
       - run: /root/.deno/bin/deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
