--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -53,18 +53,18 @@ jobs:
       - run: apt update && apt install -y curl unzip
       - run: |
           curl -fsSL https://bun.sh/install | bash
-          # export BUN_INSTALL="/root/.bun"
-          # export PATH="/root/.bun/bin:$PATH"
-          echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
-          echo "$HOME/.bun/bin" >> $GITHUB_PATH
+          export BUN_INSTALL="/root/.bun"
+          export PATH="/root/.bun/bin:$PATH"
+          # echo "BUN_INSTALL=$HOME/.bun" >> $GITHUB_ENV
+          # echo "$HOME/.bun/bin" >> $GITHUB_PATH
           echo $HOME
           bun --version
       - run: |
           curl -fsSL https://deno.land/x/install/install.sh | sh
-          # export DENO_INSTALL="/root/.deno"
-          # export PATH="/root/.deno/bin:$PATH"
-          echo "DENO_INSTALL=$HOME/.deno" >> $GITHUB_ENV
-          echo "$HOME/.deno/bin" >> $GITHUB_PATH
+          export DENO_INSTALL="/root/.deno"
+          export PATH="/root/.deno/bin:$PATH"
+          # echo "DENO_INSTALL=$HOME/.deno" >> $GITHUB_ENV
+          # echo "$HOME/.deno/bin" >> $GITHUB_PATH
           deno --version
       - run: /root/.deno/bin/deno run -A --unstable https://deno.land/x/pact/src/downloadFfi.ts --run
       - run: curl -fsSL https://raw.githubusercontent.com/pact-foundation/pact-plugins/main/scripts/install-plugin-cli.sh | bash
