--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bun-types": "^0.2.0"
   },
   "dependencies": {
-    "ffi": "^2.3.0"
+    "ffi": "^2.3.0",
+    "ramda": "^0.28.0",
+    "randexp": "^0.5.3"
   },
   "repository": {
     "type": "git",
